--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.23.5",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^1.9.7",
@@ -22,6 +23,7 @@
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3"
   },
   "devDependencies": {
